--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
 # local package
+
+mtcnn
+tensorflow
+
+keras-vggface
+keras_applications
+openvino==2024.2.0
+tqdm
 -e .
 
 # external requirements
-click
-Sphinx
-coverage
-awscli
-flake8
-python-dotenv>=0.5.1
+
